# RustyRed-Graph-Database

./: .env.example  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  REFERENCE.md  RELEASING.md  SECURITY.md  pyproject.toml  railway.toml
.agents/skills/RustyRed-Graph-Database/: SKILL.md
.agents/skills/RustyRed-Graph-Database/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: RustyRed-Graph-Database-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml  sync-downstream.yml  vendored-proto-up-to-date.yml
crates/rustyred-compat-server/: Cargo.toml
crates/rustyred-compat-server/src/: lib.rs  main.rs
crates/rustyred-core/: Cargo.toml
crates/rustyred-core/src/: algorithm_ops.rs  algorithms.rs  commands.rs  errors.rs  executor.rs  fulltext.rs  geometry.rs  graph.rs  graph_store.rs  lib.rs  morphology.rs  operation.rs  plugin.rs  spatial.rs  state.rs  store.rs  versioned_graph.rs
crates/rustyred-core/src/crdt/: clock.rs  merge.rs  mod.rs
crates/rustyred-mcp/: Cargo.toml
crates/rustyred-mcp/src/: lib.rs
crates/rustyred-resp-server/: Cargo.toml
crates/rustyred-resp-server/src/: main.rs  protocol.rs
crates/rustyred-search/: Cargo.toml
crates/rustyred-search/examples/: serp_preview.rs  serp_server.rs
crates/rustyred-search/src/: lib.rs  search.rs  serp.rs
crates/rustyred-search/tests/: fixture_crawl.rs
crates/rustyred-server/: Cargo.toml  build.rs
crates/rustyred-server/src/: auth.rs  bulk.rs  civic_projection.rs  config.rs  graph_cache.rs  graph_sync.rs  main.rs  memory.rs  metrics.rs  observability.rs  openapi.rs  query_surface.rs  router.rs  state.rs  yjs_sync.rs
crates/rustyred-server/src/cypher/: compile.rs
crates/rustyred-server/src/grpc/: mod.rs  service.rs
crates/thg-core/: Cargo.toml
crates/thg-core/src/: commands.rs  executor.rs  fulltext.rs  fulltext_tantivy.rs  graph.rs  graph_store.rs  lib.rs  spatial.rs  spatial_s2.rs  store.rs
crates/thg-mcp/: Cargo.toml
crates/thg-mcp/src/: lib.rs
crates/thg-product-server/: Cargo.toml
crates/thg-product-server/src/: auth.rs  bulk.rs  config.rs  graph_cache.rs  main.rs  metrics.rs  observability.rs  openapi.rs  query_surface.rs  router.rs  state.rs
crates/thg-product-server/src/cypher/: ast.rs  compile.rs  grammar.pest  mod.rs  parse.rs  planner.rs
crates/thg-resp-server/: Cargo.toml
crates/thg-resp-server/src/: main.rs  protocol.rs
crates/thg-server/: Cargo.toml
crates/thg-server/src/: lib.rs  main.rs
docs/: benchmarks.md  downstream-sync.md  railway-template.md
docs/adr/: 0001-vendored-proto-for-railway-build.md  README.md
docs/plans/: railway-template-publication.md  railway-template-publication.report.md
docs/plans/algorithms-plugin/: RUSTYRED-ALGORITHMS-PLUGIN.md
docs/plans/morphological-graph/: BURN-MORPHOLOGICAL-GRAPH-NORTHSTAR.md
docs/technical/: README.md  architecture.md  configuration.md  data-model.md  deployment.md  grpc-api.md  http-api.md  mcp.md  observability.md  query-surface.md
scripts/: sync-downstream-subtree.sh  sync-vendored-proto.sh
scripts/bench/: run.sh
scripts/demo/: seed.sh
src/: bgi.rs  cmh.rs  lib.rs  push_ppr.rs  rustyred.rs  search_kernel.rs  thg.rs
tests/: ppr_reference.py  test_benchmarks.py  test_bgi_parity.py  test_cmh_parity.py  test_graph_export.py  test_parity.py  test_search_kernel.py  test_smoke.py
