[package]
name = "rusty_red_native"
version = "0.5.0"
edition = "2021"
description = "Rusty Red GraphDB engine, product server, MCP adapter, and PyO3 compatibility accelerators."
license = "MIT"
repository = "https://github.com/Travis-Gilbert/RustyRed-Graph-Database"
rust-version = "1.85"

[workspace]
members = [
    ".",
    "crates/rustyred-core",
    "crates/rustyred-mcp",
    "crates/rustyred-compat-server",
    "crates/rustyred-server",
    "crates/rustyred-resp-server",
]
resolver = "2"

[lib]
name = "rusty_red_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.5", features = ["abi3-py312", "extension-module"] }
numpy = "0.22"
serde_json = "1.0"
sha2 = "0.10"
rustyred-core = { path = "crates/rustyred-core" }
egg = "0.10"
datafrog = "2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
