[package]
name = "rusty_red_native"
version = "0.6.0"
edition = "2021"
description = "Rusty Red GraphDB engine, product server, MCP adapter, and pure Rust graph algorithm helpers."
license = "MIT"
repository = "https://github.com/Travis-Gilbert/RustyRed-Graph-Database"
rust-version = "1.85"

[workspace]
members = [
    ".",
    "crates/rustyred-core",
    "crates/rustyred-mcp",
    "crates/rustyred-compat-server",
    "crates/rustyred-server",
    "crates/rustyred-resp-server",
]
resolver = "2"

[lib]
name = "rusty_red_native"

[dependencies]
rustyred-core = { path = "crates/rustyred-core" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
strip = "symbols"
