[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rusty_red_native"
version = "0.4.0"
description = "Rusty Red GraphDB engine, product server, MCP adapter, and PyO3 compatibility accelerators."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Travis Gilbert" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]

[tool.maturin]
module-name = "rusty_red_native"
features = ["pyo3/extension-module"]
strip = true
