[package]
name = "rustyred-compat-server"
version.workspace = true
edition.workspace = true
description = "Standalone HTTP command server for Rusty Red core."
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde_json = "1.0"
rustyred-core = { path = "../rustyred-core", features = ["redis-store"] }
