[package]
name = "rustyred-core"
version.workspace = true
edition.workspace = true
description = "Rusty Red core command executor and graph state machine."
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
redis-store = ["dep:redis"]
# §P5-A pa5.1+pa5.2: tantivy as alternative full-text backend behind
# RUSTY_RED_FULLTEXT_BACKEND=tantivy. Default builds keep the hand-rolled BM25.
tantivy = ["dep:tantivy"]
# §P8-A pa8.1+pa8.2: S2 cells as alternative spatial backend behind
# RUSTY_RED_SPATIAL_BACKEND=s2. Default builds keep H3.
s2 = ["dep:s2"]
geometry = ["dep:geo", "dep:geo-types", "dep:geozero"]

[dependencies]
fs2 = "0.4"
geo = { version = "0.32.0", optional = true }
geo-types = { version = "0.7.19", optional = true }
geozero = { version = "0.15.1", default-features = false, features = ["with-geo", "with-wkb", "with-wkt"], optional = true }
h3o = "0.7"
instant-distance = "0.6.1"
redis = { version = "0.27", optional = true }
s2 = { version = "0.0.12", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tantivy = { version = "0.22", optional = true }
