[package]
name = "rustyred-mcp"
version = "0.4.0"
edition = "2021"
description = "Model Context Protocol adapter for Rusty Red Graph Database."
license = "MIT"
rust-version = "1.85"

[features]
default = []
redis-store = ["rustyred-core/redis-store"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyred-core = { path = "../rustyred-core" }
