[package]
name = "rustyred-mcp"
version.workspace = true
edition.workspace = true
description = "Model Context Protocol adapter for Rusty Red Graph Database."
license.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
redis-store = ["rustyred-core/redis-store"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyred-core = { path = "../rustyred-core" }
