[package]
name = "rustyred-mcp"
version.workspace = true
edition.workspace = true
description = "Model Context Protocol adapter for Rusty Red Graph Database."
license.workspace = true
rust-version.workspace = true
publish = false

[features]
default = []
redis-store = ["rustyred-core/redis-store"]
geometry = ["rustyred-core/geometry"]
s2 = ["rustyred-core/s2"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyred-core = { path = "../rustyred-core" }
