[package]
name = "rustyred-search"
version.workspace = true
edition.workspace = true
description = "RustyRed standalone graph-native web search and crawl kernel."
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
blake3 = "1.8.5"
lol_html = "2.9.0"
reqwest = { version = "0.12.22", default-features = false, features = ["http2", "rustls-tls"] }
rustyred-core = { path = "../rustyred-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
texting_robots = "0.2.2"
tokio = { version = "1.47.1", features = ["time"] }
url = "2.5.8"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
