[package]
name = "rustyred-server"
version = "0.4.0"
edition = "2021"

[dependencies]
axum = "0.7"
http = "1"
pest = "2.7"
pest_derive = "2.7"
redis = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyred-core = { path = "../rustyred-core", features = ["redis-store"] }
rustyred-mcp = { path = "../rustyred-mcp", features = ["redis-store"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[[bin]]
name = "rustyred-server"
path = "src/main.rs"

[[bin]]
name = "rustyred-upgrade-format"
path = "src/bin/upgrade_format.rs"
