[package]
name = "rustyred-server"
version = "0.6.0"
edition = "2021"
build = "build.rs"

[dependencies]
async-trait = "0.1"
axum = "0.7"
ed25519-dalek = "2"
hex = "0.4"
http = "1"
pest = "2.7"
pest_derive = "2.7"
prost = "0.13"
redis = "0.27"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyred-core = { path = "../rustyred-core", features = ["redis-store"] }
rustyred-mcp = { path = "../rustyred-mcp", features = ["redis-store"] }
rustyred-search = { path = "../rustyred-search" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "rustyred-server"
path = "src/main.rs"

[[bin]]
name = "rustyred-upgrade-format"
path = "src/bin/upgrade_format.rs"
