[package]
name = "rustyred-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
build = "build.rs"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
ed25519-dalek = "2"
hex = "0.4"
http = "1"
pest = "2.7"
pest_derive = "2.7"
prost = "0.13"
redis = "0.27"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2"
rustyred-core = { path = "../rustyred-core", features = ["redis-store"] }
rustyred-mcp = { path = "../rustyred-mcp", features = ["redis-store"] }
rustyred-search = { path = "../rustyred-search" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.12"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
yrs = "0.27"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[features]
default = []
geometry = ["rustyred-core/geometry", "rustyred-mcp/geometry"]
s2 = ["rustyred-core/s2", "rustyred-mcp/s2"]

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "rustyred-server"
path = "src/main.rs"

[[bin]]
name = "rustyred-upgrade-format"
path = "src/bin/upgrade_format.rs"
