[package]
name = "thg-core"
version = "0.1.0"
edition = "2021"
description = "Theorem HotGraph core command executor and state machine."
license = "MIT"
rust-version = "1.78"

[features]
default = []
redis-store = ["dep:redis"]

[dependencies]
redis = { version = "0.27", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
