[package]
name = "thg-core"
version = "0.1.0"
edition = "2021"
description = "Theorem HotGraph core command executor and state machine."
license = "MIT"
rust-version = "1.85"

[features]
default = []
redis-store = ["dep:redis"]

[dependencies]
fs2 = "0.4"
h3o = "0.7"
instant-distance = "0.6.1"
redis = { version = "0.27", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
