[package]
name = "thg-mcp"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol adapter for the Theorem HotGraph graph database."
license = "MIT"
rust-version = "1.85"

[features]
default = []
redis-store = ["thg-core/redis-store"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thg-core = { path = "../thg-core" }
