[package]
name = "thg-product-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
http = "1"
redis = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thg-core = { path = "../thg-core", features = ["redis-store"] }
thg-mcp = { path = "../thg-mcp", features = ["redis-store"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
